# message-board

./: .gitignore  README.md  pyproject.toml
mb/: __init__.py  auth.py  settings.py  storage.py
mb/login/: validation.py  views.py
mb/posts/: validation.py  views.py
tests/: test_posts.py
